--- a/templates/update-book.html
+++ b/templates/update-book.html
@@ -18,7 +18,8 @@
     <div>
       <label for="author">Author</label>
       <select name="author" class="form-field">
-        {% for author in authors %}
+        <option value="{{ book.author.id }}" selected>{{ book.author.name }}</option>
+        {% for author in authors | sort(attribute="name") %}
         <option value="{{ author.id }}">{{ author.name }}</option>
         {% endfor %}
       </select>
@@ -26,7 +27,8 @@
     <div>
       <label for="series">Series</label>
       <select name="series" class="form-field">
-        {% for series in series %}
+        <option value="{{ book.series.id }}" selected>{{ book.series.name }}</option>
+        {% for series in series | sort(attribute="name") %}
         <option value="{{ series.id }}">{{ series.name }}</option>
         {% endfor %}
       </select>
@@ -43,7 +45,8 @@
     <div>
       <label for="tag">Tag</label>
       <select name="tag" class="form-field">
-        {% for tag in tags %}
+        <option value="{{ book.tag.id }}" selected>{{ book.tag.name }}</option>
+        {% for tag in tags | sort(attribute="name") %}
         <option value="{{ tag.id }}">{{ tag.name }}</option>
         {% endfor %}
       </select>
@@ -69,12 +72,13 @@
     </div>
     <div>
       <label for="isbn">ISBN</label>
-      <input name="isbn" type="number" class="form-field" />
+      <input name="isbn" type="number" class="form-field" value="{{ book.isbn }}" />
     </div>
     <div>
       <label for="publisher">Publisher</label>
       <select name="publisher" class="form-field">
-        {% for publisher in publishers %}
+        <option value="{{ book.publisher.id }}" selected>{{ book.publisher.name }}</option>
+        {% for publisher in publishers | sort(attribute="name") %}
         <option value="{{ publisher.id }}">{{ publisher.name }}</option>
         {% endfor %}
       </select>
