--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link href="/static/styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/svg+xml" href="/static/favicon.ico" />
+    <link href="/static/tailwind.css" rel="stylesheet" />
     <title>Readerporium</title>
   </head>
   <body>
