--- a/templates/tags.html
+++ b/templates/tags.html
@@ -1,9 +1,16 @@
 {% extends 'base.html' %} {% block title %}Tags{% endblock %} {% block content
 %} {% if current_user.id == 1 %}
 <div class="mb-5">
-  <form METHOD="POST" class="inline-flex">
-    <input name="name" type="text" />
-    <button type="submit" class="btn">Add Tag</button>
+  <form METHOD="POST" class="max-w-4xl py-6 mx-auto text-left">
+    <div class="grid grid-cols-2 gap-6">
+      <div>
+        <label for="name">Name</label>
+        <input type="text" class="form-field" name="name" />
+      </div>
+    </div>
+    <div class="flex justify-center mt-6">
+      <button type="submit" class="btn">Submit</button>
+    </div>
   </form>
 </div>
 {% endif %}
