--- a/templates/update-book.html
+++ b/templates/update-book.html
@@ -5,7 +5,7 @@
   METHOD="POST"
   class="max-w-4xl p-6 mx-auto text-left"
 >
-  <div class="grid grid-cols-2 gap-6">
+  <div class="grid md:grid-cols-2 gap-6">
     <div>
       <label for="title">Title</label>
       <input
