--- a/static/style.css
+++ b/static/style.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+.alert {
+	@apply bg-yellow-100 text-yellow-700 rounded-lg py-5 px-6 mb-3 text-base max-w-lg mx-auto;
+}
 li {
-  @apply flex gap-2 py-1;
+  @apply flex gap-2 py-2;
 }
 p {
   @apply pb-4;
@@ -12,7 +15,7 @@ a {
   @apply hover:underline;
 }
 img {
-  @apply w-1/3 h-auto mb-5 md:mr-5 md:float-left;
+  @apply rounded mx-auto w-3/5 mb-8 md:w-1/3 md:mb-5 md:mr-5 md:float-left;
 }
 .btn {
   @apply px-6 py-2 border border-gray-300 leading-tight hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out;
