--- a/templates/books.html
+++ b/templates/books.html
@@ -24,7 +24,7 @@
 {% endif %}
 <div class="columns-sm text-left">
   <ul>
-    {% for book in books | sort(attribute="title") %}
+    {% for book in books | sort(attribute="title") %}{% if book.level <= current_user.level %}
     <li class="break-inside-avoid">
       <span>
         <svg
@@ -46,7 +46,7 @@
         {{ book.title }} by {{ book.author.name }} {% if book.series %}<span class="text-sm">({{ book.series.name }} #{{ book.series_index }})</span>{% endif %}
       </a>
     </li>
-    {% endfor %}
+    {% endif %}{% endfor %}
   </ul>
 </div>
 {% endblock %}
