--- a/templates/level3.html
+++ b/templates/level3.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block title %}Reading Level: Adult{% endblock %} {%
-block content %}
+block content %}{% if current_user.level <= 3 %}
 <div class="columns-sm text-left">
   <ul>
     {% for book in books | sort(attribute="title") %}{% if book.level == 3 %}
@@ -30,4 +30,7 @@ block content %}
     {% endif %}{% endfor %}
   </ul>
 </div>
+{% else %}
+<div class="alert" role="alert">You are not authorized to view this book</div>
+{% endif %}
 {% endblock %}
