--- a/templates/level2.html
+++ b/templates/level2.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block title %}Reading Level: Teen{% endblock %} {%
-block content %}{% if current_user.level <= 2 %}
+block content %}{% if current_user.level == 1 or 2 %}
 <div class="columns-sm text-left">
   <ul>
     {% for book in books | sort(attribute="title") %}{% if book.level == 2 %}
