--- a/templates/level3.html
+++ b/templates/level3.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block title %}Reading Level: Adult{% endblock %} {%
-block content %}{% if current_user.level <= 3 %}
+block content %}{% if current_user.level == 1 or 2 or 3 %}
 <div class="columns-sm text-left">
   <ul>
     {% for book in books | sort(attribute="title") %}{% if book.level == 3 %}
