--- a/templates/serie.html
+++ b/templates/serie.html
@@ -40,7 +40,7 @@ block content %}
 {% endif %}
 <div class="columns-sm text-left">
   <ul>
-    {% for book in books | sort(attribute="series_index") %}{% if book.series.id == series.id and book.level <= current_user.level %}
+    {% for book in books | sort(attribute="series_index") %}{% if book.series.id == series.id %}
     <li class="break-inside-avoid">
       <span>
         <svg
