--- a/templates/update-book.html
+++ b/templates/update-book.html
@@ -62,6 +62,15 @@
       </select>
     </div>
     <div>
+      <label for="wordcount">Word Count</label>
+      <input
+        name="wordcount"
+        type="number"
+        class="form-field"
+        value="{{ book.wordcount }}"
+      />
+    </div>
+    <div>
       <label for="cover">Cover</label>
       <input
         name="cover"
@@ -82,15 +91,6 @@
         <option value="{{ publisher.id }}">{{ publisher.name }}</option>
         {% endfor %}
       </select>
-    </div>
-    <div>
-      <label for="pubyear">Year Published</label>
-      <input
-        name="pubyear"
-        type="number"
-        class="form-field"
-        value="{{ book.pubyear }}"
-      />
     </div>
   </div>
   <div class="mt-6">
