--- a/static/style.css
+++ b/static/style.css
@@ -12,7 +12,7 @@ p {
   @apply pb-4;
 }
 a {
-  @apply hover:underline;
+  @apply underline underline-offset-2 decoration-blue-400 decoration-wavy;
 }
 img {
   @apply rounded mx-auto w-3/5 mb-8 md:w-1/3 md:mb-5 md:mr-5 md:float-left;
@@ -27,5 +27,5 @@ table thead tr th {
   @apply px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider;
 }
 table tbody tr td {
-  @apply py-4 whitespace-nowrap;
+  @apply p-4 whitespace-nowrap;
 }
