Change layout to tables

--- a/templates/add-user.html
+++ b/templates/add-user.html
@@ -24,10 +24,10 @@
     <div>
       <label for="level">Level</label>
       <select name="level" class="form-field">
-        <option value="1">Child</option>
-        <option value="2">Teen</option>
-        <option value="3">Adult</option>
-        <option value="4">Mature</option>
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
       </select>
     </div>
   </div>
