--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
           <label for="password" >Password</label>
           <input type="password" class="form-field" name="password" />
           <div class="flex justify-center mt-6">
-            <button type="submit" class="btn">Login</button>
+            <button type="submit" class="w-full btn">Login</button>
           </div>
         </form>
       </div>
