--- a/static/style.css
+++ b/static/style.css
@@ -2,30 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-.alert {
-	@apply bg-yellow-100 text-yellow-700 rounded-lg py-7 px-6 mb-3 text-base max-w-lg mx-auto;
-}
-li {
-  @apply flex gap-2 py-2;
-}
-p {
-  @apply pb-4;
-}
-a {
-  @apply underline underline-offset-2 decoration-blue-400 decoration-wavy;
-}
-img {
-  @apply rounded mx-auto w-3/5 mb-8 md:w-1/3 md:mb-5 md:mr-5 md:float-left;
-}
-.btn {
-  @apply px-6 py-2 border border-gray-300 leading-tight hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out;
-}
-.form-field {
-  @apply block w-full px-4 py-2 mt-2 border border-gray-300 rounded-md;
-}
-table thead tr th {
-  @apply px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider;
-}
-table tbody tr td {
-  @apply p-4 whitespace-nowrap;
-}
+h1, h2, h3 { @apply text-center; }
+h1 { @apply text-2xl md:text-3xl lg:text-4xl; }
+h2 { @apply text-xl md:text-2xl lg:text-3xl mb-6; }
+h3 { @apply text-lg md:text-xl lg:text-2xl mb-4; }
+li { @apply flex gap-2 py-2; }
+p { @apply pb-4; }
+a { @apply hover:underline underline-offset-2 decoration-wavy; }
+
+table { @apply min-w-full; }
+table thead { @apply border-b; }
+table thead tr th { @apply font-medium uppercase bg-gray-300 px-6 py-4; }
+table tbody tr { @apply border-b transition duration-300 ease-in-out hover:bg-gray-100; }
+table tbody tr td { @apply font-light px-6 py-4 whitespace-nowrap; }
+
+img { @apply rounded mx-auto w-3/5 mb-8 md:w-1/3 md:mb-5; }
+
+.btn { @apply inline-block px-6 py-2.5 bg-gray-100 font-medium leading-tight uppercase rounded shadow-md hover:bg-gray-300 hover:shadow-lg focus:bg-gray-300 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-gray-500 active:shadow-lg transition duration-150 ease-in-out; }
+.alert { @apply bg-gray-300 rounded-lg py-7 px-4 mb-6 text-base max-w-2xl mx-auto; }
+.form-field { @apply block w-full px-4 py-2 mt-2 border border-gray-300 rounded-md; }
