--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,32 +1,15 @@
 {% extends 'base.html' %}{% block title %}Admin{% endblock %}{% block content %}
-<div class="flex items-center justify-center mb-6">
-  <div class="inline-flex" role="group">
-    <a href="{{ url_for('add_user') }}" class="btn rounded">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="h-6 w-6"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-        stroke-width="2"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"
-        />
-      </svg>
-    </a>
-  </div>
+<div class="flex justify-center mb-6">
+  <a href="{{ url_for('add_user') }}">
+		<i class="fa-solid fa-user-plus fa-lg"></i>
+  </a>
 </div>
-<div class="flex flex-col">
-  <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-    <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-      <div
-        class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg"
-      >
-        <table class="min-w-full divide-y divide-gray-200">
-          <thead class="bg-gray-50">
+<div class="flex justify-center">
+  <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
+    <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
+      <div class="overflow-x-auto shadow sm:rounded-lg">
+        <table>
+          <thead>
             <tr>
               <th scope="col">ID</th>
               <th scope="col">Name</th>
@@ -35,9 +18,9 @@
               <th scope="col">Options</th>
             </tr>
           </thead>
-          <tbody class="bg-white divide-y divide-gray-200">
+          <tbody>
             {% for user in users %}
-            <tr>
+            <tr class="text-center">
               <td>
                 {{ user.id }}
               </td>
@@ -50,38 +33,12 @@
               <td>
                 {{ user.level }}
               </td>
-              <td class="inline-flex">
+              <td class="inline-flex gap-2">
                 <a href="{{ url_for('update_user', id=user.id) }}" class="m-1">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="h-7 w-7"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke="currentColor"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
-                    />
-                  </svg>
+                  <i class="fa-solid fa-pencil fa-xl"></i>
                 </a>
                 <a href="{{ url_for('delete_user', id=user.id) }}">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="h-7 w-7"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke="currentColor"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
-                    />
-                  </svg>
+                  <i class="fa-solid fa-trash fa-lg"></i>
                 </a>
               </td>
             </tr>
@@ -92,5 +49,4 @@
     </div>
   </div>
 </div>
-
 {% endblock %}
