--- a/templates/authors.html
+++ b/templates/authors.html
@@ -10,10 +10,10 @@
       <div>
         <label for="level">Level</label>
         <select name="level" class="form-field">
-          <option value="1">Child</option>
-          <option value="2">Teen</option>
-          <option value="3">Adult</option>
-          <option value="4">Mature</option>
+          <option>1</option>
+	        <option>2</option>
+	        <option>3</option>
+	        <option>4</option>
         </select>
       </div>
     </div>
@@ -23,30 +23,24 @@
   </form>
 </div>
 {% endif %}
-<div class="columns-xs text-left">
-  <ul>
-    {% for author in authors | sort(attribute="name") %}{% if author.level <= current_user.level %}
-    <li>
-      <span>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-          stroke-width="2"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
-          />
-        </svg>
-      </span>
-      <a href="{{ url_for('authors') }}/{{ author.id }}">{{ author.name }}</a>
-    </li>
-    {% endif %}{% endfor %}
-  </ul>
+<div class="flex justify-center">
+  <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
+    <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
+      <div class="overflow-x-auto shadow sm:rounded-lg">
+        <table>
+          <tbody>
+            {% for author in authors | sort(attribute="name") %}{% if author.level <= current_user.level %}<tr>
+              <td>
+	              <a href="{{ url_for('authors') }}/{{ author.id }}">
+					        <i class='fa-solid fa-user'></i>
+	              	{{ author.name }}
+              	</a>
+              </td>
+            </tr>{% endif %}{% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 </div>
-
 {% endblock %}
