--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <link rel="icon" type="image/svg+xml" href="/static/favicon.ico" />
     <link href="/static/tailwind.css" rel="stylesheet" />
     <title>Readerporium</title>
+    <!--<script src="https://kit.fontawesome.com/42f6f50d63,js" crossorigin="anonymous"></script>-->
+    <link href="/static/fontawesome/css/all.css" rel="stylesheet">
   </head>
   <body class="container mx-auto py-8 font-mono">
     {% for message in get_flashed_messages() %}
@@ -14,170 +16,79 @@
       {{ message }}
     </div>
     {% endfor %}
-    <h1 class="text-2xl md:text-3xl lg:text-4xl text-center">Readerporium</h1>
-    <div class="mt-4 p-6 text-center">
-      <ul class="flex flex-wrap justify-center gap-3 mb-6">
-        <li>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
-            />
-          </svg>
-          <a href="{{ url_for('index') }}">Home</a>
-        </li>
-        <li>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"
-            />
-          </svg>
-          <a href="{{ url_for('books') }}">Titles</a>
-        </li>
-        <li>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"
-            />
-          </svg>
-          <a href="{{ url_for('authors') }}">Authors</a>
-        </li>
-        <li>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"
-            />
-          </svg>
-          <a href="{{ url_for('tags') }}">Tags</a>
-        </li>
-        <li>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"
-            />
-          </svg>
-          <a href="{{ url_for('series') }}">Series</a>
-        </li>
-        <li>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M8 14v3m4-3v3m4-3v3M3 21h18M3 10h18M3 7l9-4 9 4M4 10h16v11H4V10z"
-            />
-          </svg>
-          <a href="{{ url_for('publishers') }}">Publishers</a>
-        </li>
-        <li>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            stroke-width="2"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
-            />
-          </svg>
-          <a href="{{ url_for('levels') }}">Levels</a>
-        </li>
-        {% if current_user.id == 1 %}
-        <li>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            stroke-width="2"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z"
-            />
-          </svg>
-          <a href="{{ url_for('admin') }}">Admin</a>
-        </li>
-        {% endif %}
-        <li>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            stroke-width="2"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"
-            />
-          </svg>
-          <a href="{{ url_for('logout') }}"
-            >Logout {{ current_user.username }}</a
-          >
-        </li>
-      </ul>
-      <h2 class="text-xl md:text-2xl lg:text-3xl mb-6">
-        {% block title %}{% endblock %}
-      </h2>
+    <h1>Readerporium</h1>
+    <div class="mt-4">
+    	<div class="flex flex-col">
+			  <div class="overflow-x-auto sm:-mx-6 lg:-mx-8 mb-6">
+			    <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
+			      <div class="overflow-x-auto shadow rounded-lg">
+			        <table>
+			          <tbody>
+			            <tr class="border-none font-medium bg-gray-300 hover:bg-gray-300 px-6 py-4">
+			            	<td>
+						          <a href="{{ url_for('index') }}">
+						          	<i class="fa-solid fa-house"></i>
+						          	Home
+					          	</a>
+						        </td>
+						        <td>
+						          <a href="{{ url_for('books') }}">
+						          	<i class="fa-solid fa-book"></i>
+						          	Titles
+						          </a>
+						        </td>
+						        <td>
+						          <a href="{{ url_for('authors') }}">
+						          	<i class="fa-solid fa-users"></i>
+						          	Authors
+						          </a>
+						        </td>
+						        <td>
+						          <a href="{{ url_for('tags') }}">
+						          	<i class="fa-solid fa-tags"></i>
+						          	Tags
+					          	</a>
+						        </td>
+						        <td>
+						          <a href="{{ url_for('series') }}">
+						          	<i class="fa-solid fa-list-ol"></i>
+						          	Series
+					          	</a>
+						        </td>
+						        <td>
+						          <a href="{{ url_for('publishers') }}">
+						          	<i class="fa-solid fa-building"></i>
+						          	Publishers
+					          	</a>
+						        </td>
+						        <td>
+						          <a href="{{ url_for('levels') }}">
+						          	<i class="fa-solid fa-star"></i>
+						          	Levels
+					          	</a>
+						        </td>
+						        {% if current_user.id == 1 %}
+						        <td>
+						          <a href="{{ url_for('admin') }}">
+						          	<i class="fa-solid fa-circle-user"></i>
+						          	Admin
+					          	</a>
+						        </td>
+						        {% endif %}
+						        <td>
+						          <a href="{{ url_for('logout') }}">
+						          	<i class="fa-solid fa-arrow-right-from-bracket"></i>
+						            Logout {{ current_user.username }}
+						          </a>
+						        </td>
+			            </tr>
+			          </tbody>
+			        </table>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+      <h2>{% block title %}{% endblock %}</h2>
       {% block content %} {% endblock %}
     </div>
   </body>
