--- a/templates/book.html
+++ b/templates/book.html
@@ -1,140 +1,148 @@
 {% extends 'base.html' %} {% block title %}{{ book.title }} by
 {{ book.author.name }}{% endblock %} {% block content %}
-<div class="max-w-4xl p-6 mx-auto text-left">
-  <img
-    src="{% if book.cover %}{{
-      book.cover
-    }}{% else %}https://via.placeholder.com/300x400?text=Cover{% endif %}"
-    alt="book cover image"
-  />
-  <p>Title: {{ book.title }}</p>
-  <p>
-    Author:
-    <a href="{{ url_for('authors') }}/{{ book.author.id }}">{{
-      book.author.name
-    }}</a>
-  </p>
-  <p>
-    Series:
-    <a href="{{ url_for('series') }}/{{ book.series.id }}"
-      >{{ book.series.name }} #{{ book.series_index }}</a
-    >
-  </p>
-  <p>
-    Tag:
-    <a href="{{ url_for('tags') }}/{{ book.tag.id }}">{{ book.tag.name }}</a>
-  </p>
-  <p>
-  	Reading Level: {% if book.level == 1 %}Child{% elif book.level == 2 %}Teen{%
-    elif book.level == 3 %}Adult{% else %}Mature{% endif %}
-  </p>
-  <p>
-  	Words: {{ book.wordcount }} (
-  	{% if book.wordcount <= 3500 %}<a href="{{ url_for('flash_fiction') }}">flash fiction</a>
-  	{% elif book.wordcount <= 7500  %}<a href="{{ url_for('short_stories') }}">short story</a>
-  	{% elif book.wordcount <= 17000 %}<a href="{{ url_for('novellettes') }}">novellette</a>
-  	{% elif book.wordcount <= 40000 %}<a href="{{ url_for('novellas') }}">novella</a>
-  	{% else %}<a href="{{ url_for('novels') }}">novel</a>
-  	{% endif %}
-  	)
-	</p>
-  <p>ISBN: {{ book.isbn }}</p>
-  <p>
-    Publisher:
-    <a href="{{ url_for('publishers') }}/{{ book.publisher.id }}">
-      {{ book.publisher.name }}
-    </a>
-  </p>
-
-  <div class="my-8">{% markdown %}{{ book.description }}{% endmarkdown %}</div>
-
-  <div class="flex items-center justify-center mb-4">
-    <div class="inline-flex first:rounded-l last:rounded-r" role="group">
-      {% if current_user.id == 1 %}
-      <a href="{{ url_for('update_book', id=book.id) }}" class="btn">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
-          />
-        </svg>
-      </a>
-      <a href="{{ url_for('delete_book', id=book.id) }}" class="btn">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
-          />
-        </svg>
-      </a>
-      {% endif %}
+<img
+  src="{% if book.cover %}{{ book.cover }}{% else %}https://via.placeholder.com/300x400?text=Cover{% endif %}"
+  alt="cover img"
+/>
+<div class="flex justify-center">
+  <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
+    <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
+      <div class="overflow-x-auto shadow sm:rounded-lg">
+        <table class="text-center">
+          <thead>
+            <tr>
+              <th scope="col">
+                Series
+              </th>
+              <th scope="col">
+                Tag
+              </th>
+              <th scope="col">
+              	Level
+              </th>
+              <th scope="col">
+              	Words
+              </th>
+              <th scope="col">
+              	ISBN
+              </th>
+              <th scope="col">
+              	Publisher
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+              	<a href="{{ url_for('series') }}/{{ book.series.id }}">
+              		<i class="fa-solid fa-list-ol"></i>
+	                {{ book.series.name }} #{{ book.series_index }}
+	              </a>
+              </td>
+              <td>
+              	<a href="{{ url_for('tags') }}/{{ book.tag.id }}">
+              		<i class="fa-solid fa-tag"></i>
+	                {{ book.tag.name }}
+                </a>
+              </td>
+              <td>
+              	<a href="{{ url_for('levels') }}/{{ book.level }}">
+	              	<i class="fa-solid fa-star"></i>
+	              	{{ book.level }}
+              	</a>
+              </td>
+              <td>
+              	<i class="fa-solid fa-number"></i>
+              	{{ book.wordcount }}
+              	{% if book.wordcount <= 3500 %}<a href="{{ url_for('flash_fiction') }}"> (flash fiction)</a>
+              	{% elif book.wordcount <= 7500  %}<a href="{{ url_for('short_stories') }}"> (short story)</a>
+              	{% elif book.wordcount <= 17000 %}<a href="{{ url_for('novellettes') }}"> (novellette)</a>
+              	{% elif book.wordcount <= 40000 %}<a href="{{ url_for('novellas') }}"> (novella)</a>
+              	{% else %}<a href="{{ url_for('novels') }}"> (novel)</a>{% endif %}
+              </td>
+              <td>
+              	<i class="fa-solid fa-number"></i>
+              	{{ book.isbn }}
+              </td>
+              <td>
+              	<a href="{{ url_for('publishers') }}/{{ book.publisher.id }}">
+              		<i class="fa-solid fa-building"></i>
+						      {{ book.publisher.name }}
+						    </a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
-	<div class="flex flex-col">
-	  <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-	    <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-	      <div
-	        class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg"
-	      >
-	        <table class="min-w-full divide-y divide-gray-200">
-	          <thead class="bg-gray-50">
-	            <tr>
-	              <th scope="col">Format</th>
-	              <th scope="col">Description</th>
-	            </tr>
-	          </thead>
-	          <tbody class="bg-white divide-y divide-gray-200">
-		          <tr>
-					      <td>
-					      	<a href="https://aspiring-writer.gitlab.io/books/{% if book.level == 1 %}Child{% elif book.level == 2 %}Teen{% elif book.level == 3 %}Adult{% else %}Mature{% endif %}/{{ book.author.name }}/{{ book.title }}.epub">
-					      		EPUB
-					      	</a>
-					      </td>
-					      <td>
-					      	Supported by most e-readers, smartphones, tablets, and computers.
-					      </td>
-					    </tr>
-					    <tr>
-					      <td>
-					      	<a href="https://aspiring-writer.gitlab.io/books/{% if book.level == 1 %}Child{% elif book.level == 2 %}Teen{% elif book.level == 3 %}Adult{% else %}Mature{% endif %}/{{ book.author.name }}/{{ book.title }}.kepub.epub">
-					      		KEPUB
-					      	</a>
-					      </td>
-					      <td>
-					      	This is the recommended format for Kobo e-readers.
-					      </td>
-					    </tr>
-					    <tr>
-					      <td>
-					      	<a href="https://aspiring-writer.gitlab.io/books/{% if book.level == 1 %}Child{% elif book.level == 2 %}Teen{% elif book.level == 3 %}Adult{% else %}Mature{% endif %}/{{ book.author.name }}/{{ book.title }}.mobi">
-					      		MOBI
-					      	</a>
-					      </td>
-					      <td>
-					      	Legacy format for Kindles.
-					      </td>
-					    </tr>
-	          </tbody>
-	        </table>
-	      </div>
-	    </div>
-	  </div>
-	</div>
+</div>
+<div class="max-w-4xl p-6 mx-auto">
+  <div class="my-8">{% markdown %}{{ book.description }}{% endmarkdown %}</div>
+</div>
+{% if current_user.id == 1 %}
+<div class="flex justify-center gap-2 mb-6">
+  <a href="{{ url_for('update_book', id=book.id) }}">
+    <i class="fa-solid fa-pencil fa-xl"></i>
+  </a>
+  <a href="{{ url_for('delete_book', id=book.id) }}">
+		<i class="fa-solid fa-trash fa-lg"></i>
+  </a>
+</div>
+{% endif %}
+<div class="flex justify-center">
+  <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
+    <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
+      <div class="overflow-x-auto shadow sm:rounded-lg">
+        <table>
+          <thead>
+            <tr>
+              <th scope="col">
+                Format
+              </th>
+              <th scope="col">
+                Description
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+				      <td>
+				      	<a href="https://aspiring-writer.gitlab.io/books/{% if book.level == 1 %}Child{% elif book.level == 2 %}Teen{% elif book.level == 3 %}Adult{% else %}Mature{% endif %}/{{ book.author.name }}/{{ book.title }}.epub">
+				      		<i class="fa-solid fa-download"></i>
+				      		EPUB
+				      	</a>
+				      </td>
+				      <td>
+				      	Supported by most e-readers, smartphones, tablets, and computers.
+				      </td>
+				    </tr>
+				    <tr>
+				      <td>
+				      	<a href="https://aspiring-writer.gitlab.io/books/{% if book.level == 1 %}Child{% elif book.level == 2 %}Teen{% elif book.level == 3 %}Adult{% else %}Mature{% endif %}/{{ book.author.name }}/{{ book.title }}.kepub.epub">
+				      		<i class="fa-solid fa-download"></i>
+				      		KEPUB
+				      	</a>
+				      </td>
+				      <td>
+				      	This is the recommended format for Kobo e-readers.
+				      </td>
+				    </tr>
+				    <tr>
+				      <td>
+				      	<a href="https://aspiring-writer.gitlab.io/books/{% if book.level == 1 %}Child{% elif book.level == 2 %}Teen{% elif book.level == 3 %}Adult{% else %}Mature{% endif %}/{{ book.author.name }}/{{ book.title }}.mobi">
+				      		<i class="fa-solid fa-download"></i>
+				      		MOBI
+				      	</a>
+				      </td>
+				      <td>
+				      	Legacy format for Kindles.
+				      </td>
+				    </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
