--- a/templates/home.html
+++ b/templates/home.html
@@ -1,30 +1,61 @@
 {% extends 'base.html' %}{% block title %}👋 Welcome {{ current_user.name }}! 🥳{% endblock %} {% block content %}
-<h3 class="text-lg md:text-xl lg:text-2xl mb-4">Recently Added</h3>
-<div class="columns-sm text-left">
-  <ul>
-    {% for book in books %}{% if book.level <= current_user.level %}
-    <li class="break-inside-avoid">
-      <span>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"
-          />
-        </svg>
-      </span>
-      <a href="{{ url_for('books') }}/{{ book.id }}">
-        {{ book.title }} by {{ book.author.name }} {% if book.series %}<span class="text-sm">({{ book.series.name }} #{{ book.series_index }})</span>{% endif %}
-      </a>
-    </li>
-    {% endif %}{% endfor %}
-  </ul>
+<h3>Recently Added</h3>
+<div class="flex justify-center">
+  <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
+    <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
+      <div class="overflow-x-auto shadow sm:rounded-lg">
+        <table>
+          <thead>
+            <tr>
+              <th scope="col">
+                #
+              </th>
+              <th scope="col">
+                Title
+              </th>
+              <th scope="col">
+                Author
+              </th>
+              <th scope="col">
+                Series
+              </th>
+              <th scope="col">
+                Tag
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for book in books %}{% if book.level <= current_user.level %}<tr>
+              <td>{{ book.id }}</td>
+              <td>
+	              <a href="{{ url_for('books') }}/{{ book.id }}">
+					        <i class='fa-solid fa-book'></i>
+	              	{{ book.title }}
+              	</a>
+              </td>
+              <td>
+              	<a href="{{ url_for('authors') }}/{{ book.author.id }}">
+              		<i class="fa-solid fa-user"></i>
+	                {{ book.author.name }}
+                </a>
+              </td>
+              <td>
+              	<a href="{{ url_for('series') }}/{{ book.series.id }}">
+              		<i class="fa-solid fa-list-ol"></i>
+	                {{ book.series.name }} #{{ book.series_index }}
+	              </a>
+              </td>
+              <td>
+              	<a href="{{ url_for('tags') }}/{{ book.tag.id }}">
+              		<i class="fa-solid fa-tag"></i>
+	                {{ book.tag.name }}
+                </a>
+              </td>
+            </tr>{% endif %}{% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
