add fontawesome, cleanup

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <link href="/static/tailwind.css" rel="stylesheet" />
     <title>Readerporium</title>
     <!--<script src="https://kit.fontawesome.com/42f6f50d63,js" crossorigin="anonymous"></script>-->
-    <link href="/static/fontawesome/css/all.css" rel="stylesheet">
+    <link href="/static/fontawesome/css/all.min.css" rel="stylesheet">
   </head>
   <body class="container mx-auto py-8 font-mono">
     {% for message in get_flashed_messages() %}
