--- a/static/style.css
+++ b/static/style.css
@@ -12,11 +12,11 @@ a { @apply hover:underline underline-offset-2 decoration-wavy; }
 
 table { @apply min-w-full; }
 table thead { @apply border-b; }
-table thead tr th { @apply font-medium uppercase bg-gray-300 px-6 py-4; }
+table thead tr th { @apply font-medium uppercase bg-gray-100 p-4; }
 table tbody tr { @apply border-b transition duration-300 ease-in-out hover:bg-gray-100; }
-table tbody tr td { @apply font-light px-6 py-4 whitespace-nowrap; }
+table tbody tr td { @apply font-light p-4 whitespace-normal; }
 
-img { @apply rounded mx-auto w-3/5 mb-8 md:w-1/3 md:mb-5; }
+img { @apply rounded w-3/5 mb-8 md:w-1/3 md:mb-5 md:mr-5 md:float-left; }
 
 .btn { @apply inline-block px-6 py-2.5 bg-gray-100 font-medium leading-tight uppercase rounded shadow-md hover:bg-gray-300 hover:shadow-lg focus:bg-gray-300 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-gray-500 active:shadow-lg transition duration-150 ease-in-out; }
 .alert { @apply bg-gray-300 rounded-lg py-7 px-4 mb-6 text-base max-w-2xl mx-auto; }
