--- a/templates/author.html
+++ b/templates/author.html
@@ -15,39 +15,14 @@ block content %}
     <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
       <div class="overflow-x-auto shadow sm:rounded-lg">
         <table>
-          <thead>
-            <tr>
-              <th scope="col">
-                Title
-              </th>
-              <th scope="col">
-                Series
-              </th>
-              <th scope="col">
-                Tag
-              </th>
-            </tr>
-          </thead>
           <tbody>
             {% for book in books | sort(attribute="title") %}{% if book.author.id == author.id %}
             <tr>
               <td>
 	              <a href="{{ url_for('books') }}/{{ book.id }}">
 					        <i class='fa-solid fa-book'></i>
-	              	{{ book.title }}
+	              	{{ book.title }} ({{ book.series.name }} #{{ book.series_index }})
               	</a>
-              </td>
-              <td>
-              	<a href="{{ url_for('series') }}/{{ book.series.id }}">
-              		<i class="fa-solid fa-list-ol"></i>
-	                {{ book.series.name }} #{{ book.series_index }}
-	              </a>
-              </td>
-              <td>
-              	<a href="{{ url_for('tags') }}/{{ book.tag.id }}">
-              		<i class="fa-solid fa-tag"></i>
-	                {{ book.tag.name }}
-                </a>
               </td>
             </tr>
             {% endif %}{% endfor %}
