--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,13 @@
     {% endfor %}
     <h1>Readerporium</h1>
     <div class="mt-4">
-    	<div class="flex flex-col">
+    	<div class="flex justify-center">
 			  <div class="overflow-x-auto sm:-mx-6 lg:-mx-8 mb-6">
 			    <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
 			      <div class="overflow-x-auto shadow rounded-lg">
 			        <table>
 			          <tbody>
-			            <tr class="border-none font-medium bg-gray-300 hover:bg-gray-300 px-6 py-4">
+			            <tr class="border-none font-medium bg-gray-100 hover:bg-gray-100 px-6 py-4">
 			            	<td>
 						          <a href="{{ url_for('index') }}">
 						          	<i class="fa-solid fa-house"></i>
