--- a/templates/home.html
+++ b/templates/home.html
@@ -1,55 +1,18 @@
 {% extends 'base.html' %}{% block title %}👋 Welcome {{ current_user.name }}! 🥳{% endblock %} {% block content %}
 <h3>Recently Added</h3>
 <div class="flex justify-center">
-  <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
+  <div class="sm:-mx-6 lg:-mx-8">
     <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
-      <div class="overflow-x-auto shadow sm:rounded-lg">
+      <div class="shadow sm:rounded-lg">
         <table>
-          <thead>
-            <tr>
-              <th scope="col">
-                #
-              </th>
-              <th scope="col">
-                Title
-              </th>
-              <th scope="col">
-                Author
-              </th>
-              <th scope="col">
-                Series
-              </th>
-              <th scope="col">
-                Tag
-              </th>
-            </tr>
-          </thead>
           <tbody>
             {% for book in books %}{% if book.level <= current_user.level %}<tr>
               <td>{{ book.id }}</td>
               <td>
 	              <a href="{{ url_for('books') }}/{{ book.id }}">
 					        <i class='fa-solid fa-book'></i>
-	              	{{ book.title }}
+	              	{{ book.title }} by {{ book.author.name }}
               	</a>
-              </td>
-              <td>
-              	<a href="{{ url_for('authors') }}/{{ book.author.id }}">
-              		<i class="fa-solid fa-user"></i>
-	                {{ book.author.name }}
-                </a>
-              </td>
-              <td>
-              	<a href="{{ url_for('series') }}/{{ book.series.id }}">
-              		<i class="fa-solid fa-list-ol"></i>
-	                {{ book.series.name }} #{{ book.series_index }}
-	              </a>
-              </td>
-              <td>
-              	<a href="{{ url_for('tags') }}/{{ book.tag.id }}">
-              		<i class="fa-solid fa-tag"></i>
-	                {{ book.tag.name }}
-                </a>
               </td>
             </tr>{% endif %}{% endfor %}
           </tbody>
