--- a/templates/publishers.html
+++ b/templates/publishers.html
@@ -32,7 +32,7 @@ content %} {% if current_user.id == 1 %}
             {% for publisher in publishers | sort(attribute="name") %}{% if publisher.level <= current_user.level %}<tr>
               <td>
 	              <a href="{{ url_for('publishers') }}/{{ publisher.id }}">
-					        <i class='fa-solid fa-user'></i>
+					        <i class='fa-solid fa-building'></i>
 	              	{{ publisher.name }}
               	</a>
               </td>
