--- a/templates/wordcount.html
+++ b/templates/wordcount.html
@@ -4,54 +4,17 @@
     <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
       <div class="overflow-x-auto shadow sm:rounded-lg">
         <table>
-          <thead>
-            <tr>
-              <th scope="col">
-                Title
-              </th>
-              <th scope="col">
-                Author
-              </th>
-              <th scope="col">
-                Series
-              </th>
-              <th scope="col">
-                Tag
-              </th>
-              <th scope="col">
-              	Words
-              </th>
-            </tr>
-          </thead>
           <tbody>
             {% for book in books | sort(attribute="title") %}{% if book.wordcount < min %}{% elif book.wordcount <= max %}
             <tr>
               <td>
 	              <a href="{{ url_for('books') }}/{{ book.id }}">
 					        <i class='fa-solid fa-book'></i>
-	              	{{ book.title }}
+	              	{{ book.title }} by {{ book.author.name }}
               	</a>
               </td>
               <td>
-              	<a href="{{ url_for('authors') }}/{{ book.author.id }}">
-              		<i class="fa-solid fa-user"></i>
-	                {{ book.author.name }}
-                </a>
-              </td>
-              <td>
-              	<a href="{{ url_for('series') }}/{{ book.series.id }}">
-              		<i class="fa-solid fa-list-ol"></i>
-	                {{ book.series.name }} #{{ book.series_index }}
-	              </a>
-              </td>
-              <td>
-              	<a href="{{ url_for('tags') }}/{{ book.tag.id }}">
-              		<i class="fa-solid fa-tag"></i>
-	                {{ book.tag.name }}
-                </a>
-              </td>
-              <td>
-              	<i class="fa-solid fa-number"></i>
+              	<i class="fa-solid fa-arrow-down-1-9"></i>
               	{{ book.wordcount }}
               </td>
             </tr>
